# learn-playwright

./: .gitignore  README.md  async.py  codegendemo.py  pyproject.toml  pytest.ini  sync.py
inputs/: buttons.py  checkboxes.py  clicks.py  radios.py  selects.py
tests/: conftest.py  test_api.py  test_saucedemo.py
