[tool.poetry]
name = "learn-playwright"
version = "0.1.0"
description = ""
authors = ["Enveed <sopagnarithseam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest-playwright = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
